feat: update env value

--- a/home/.env
+++ b/home/.env
@@ -1,2 +1,2 @@
-BLOG_URL=http://localhost:4000/
-APP_URL=http://localhost:6000/
+BLOG_URL=https://nextjs-multizone-black.vercel.app/
+APP_URL=https://nextjs-multizone-app.vercel.app/
