fix: remove backslash from url

--- a/home/.env
+++ b/home/.env
@@ -1,2 +1,2 @@
-BLOG_URL=https://nextjs-multizone-black.vercel.app/
-APP_URL=https://nextjs-multizone-app.vercel.app/
+BLOG_URL=https://nextjs-multizone-black.vercel.app
+APP_URL=https://nextjs-multizone-app.vercel.app
